# ghag

./: .pre-commit-config.yaml  LICENSE  README.md  conftest.py  ctx.py  foo.py  pyproject.toml
.github/workflows/: check.py  check.yml
src/gag/: __init__.py  contexts.py  ctx.py  expr.py  rules.py  workflow.py
src/ghag/: __init__.py  contexts.py  ctx.py  expr.py  workflow.py
src/ghgen/: __init__.py  contexts.py  ctx.py  element.py  expr.py  rules.py  types.py  workflow.py
src/pyactions/: __init__.py  ctx.py  element.py  expr.py  rules.py  workflow.py
src/pyactions/new/: expr.py
tests/: .gitignore  test_basic.expected.yml  test_default.yml  test_errors.py  test_expr.py  test_merge.expected.yml  test_new_expr.py  test_rules.py  test_workflow.py  test_worklfow.py
