[project]
name = "gag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paolo Tranquilli", email = "redsun82@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.4",
    "ruamel-yaml>=0.18.10",
]

[project.scripts]
gag = "gag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
]
